--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "axios": "^0.14.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "bcrypt": "^0.8.7",
+    "bcrypt-pbkdf": "^1.0.0",
     "blob-stream": "^0.1.3",
     "bluebird": "^3.4.1",
     "bootstrap": "^4.0.0-alpha.3",
     "bootstrap-sass": "^3.3.7",
     "bowser": "^1.4.3",
+    "ecc-jsbn": "^0.1.1",
     "fibers": "^1.0.13",
     "font-awesome": "^4.6.3",
     "fs": "0.0.2",
     "future": "^2.3.1",
     "jimp": "^0.2.27",
+    "jodid25519": "^1.0.2",
     "js2xmlparser": "^2.0.2",
+    "jsbn": "^0.1.0",
+    "json2csv": "^3.7.0",
     "jspdf": "^1.2.61",
     "localforage": "^1.4.2",
     "lodash": "^4.14.1",
@@ -28,7 +33,7 @@
     "moment-timezone": "^0.5.5",
     "payment": "^1.0.4",
     "pdfjs-dist": "^1.5.365",
-    "react": "^15.3.0",
+    "react": "^15.3.2",
     "react-bootstrap": "^0.30.2",
     "react-datepicker": "^0.29.0",
     "react-dom": "^15.3.0",
