--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-sass": "^3.3.7",
     "bowser": "^1.4.3",
     "ecc-jsbn": "^0.1.1",
+    "fbjs": "^0.8.5",
     "fibers": "^1.0.13",
     "font-awesome": "^4.6.3",
     "fs": "0.0.2",
@@ -36,7 +37,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.2",
     "react-datepicker": "^0.29.0",
-    "react-dom": "^15.3.0",
+    "react-dom": "^15.3.2",
     "react-dropzone": "^3.6.0",
     "react-meteor-subscribe": "0.0.1",
     "react-pdf": "0.0.10",
