--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   },
   "dependencies": {
     "authorizenet": "^1.0.0",
+    "aws-sdk": "^2.6.12",
     "axios": "^0.14.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
     "bcrypt-pbkdf": "^1.0.0",
     "blob-stream": "^0.1.3",
@@ -15,9 +17,13 @@
     "bootstrap": "^4.0.0-alpha.3",
     "bootstrap-sass": "^3.3.7",
     "bowser": "^1.4.3",
+    "create-hash": "^1.1.2",
+    "diffie-hellman": "^5.0.2",
     "ecc-jsbn": "^0.1.1",
     "fbjs": "^0.8.5",
     "fibers": "^1.0.13",
+    "file-save": "^0.2.0",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.6.3",
     "fs": "0.0.2",
     "future": "^2.3.1",
@@ -46,6 +52,7 @@
     "react-router-bootstrap": "^0.23.1",
     "react-select": "^1.0.0-rc.1",
     "react-signature-pad": "0.0.5",
+    "react-spinkit": "^1.1.11",
     "redux": "^3.5.2",
     "redux-form": "^6.0.0-rc.5",
     "redux-logger": "^2.6.1",
@@ -54,6 +61,7 @@
     "reselect": "^2.5.3",
     "soap": "^0.16.0",
     "validate.js": "^0.10.0",
+    "write": "^0.3.2",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
