--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "authorizenet": "^1.0.0",
-    "aws-sdk": "^2.6.12",
+    "aws-sdk": "^2.7.1",
     "axios": "^0.14.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-runtime": "^6.18.0",
@@ -56,6 +56,7 @@
     "redux": "^3.5.2",
     "redux-form": "^6.0.0-rc.5",
     "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
     "redux-saga": "^0.11.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.3",
